--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
     <!--Custom CSS-->
     <link href="/css/site.css" rel="stylesheet">
-    <link href="/css/hoverCard.css" rel="stylesheet">
-    <link href="/css/blogCard.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -33,7 +30,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" id="mainNav">
         <div class="container-xxl">
             <a class="navbar-brand" href="#">
-                <img src="/img/img/typingbgdark.png" height="50" width="150"><--Need to add logo here
+                <img src="/img/Logo1 .jpeg" height="50" width="150"><--Need to add logo here
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -61,15 +58,10 @@
     <!--Banner Image and CTA-->
     <header class="container-xxl" id="home">
         <div class="mainHeader">
-            <div class="mainHeader-content h-100 w-100 d-flex justify-content-start align-items-center">
+            <div class="mainHeader-content h-100 w-100 d-flex align-items-center">
                 <div class="mainHeader-wrapper">
-                    <!-- More content will go in here -->
-                    <div class="mainTitle">Welcome to</div>
-                    <div class="mainTitle">THE GRILL ON THIRD!</div>
-                    <!-- <div class="subTitle"><strong>WEB DEVELOPER</strong></div>
-                    <a class="btn btn-primary mt-3" href="#contact">CONTACT ME</a> -->
-                    <!-- <div class="mainTitle"><span><img src="/img/img/LogoSigWhite-TP.png" class="mainLogo"></span> 
-                    </div> -->
+                    <div class="mainTitle text-center">Welcome to</div>
+                    <div class="mainTitle text-center">THE GRILL ON THIRD!</div>
                 </div>
             </div>
         </div>
